Model stimuli, more refs, methods formulas

--- a/refs.bib
+++ b/refs.bib
@@ -1112,3 +1112,44 @@
   year={2014},
   publisher={Public Library of Science}
 }
+
+@article{sakaguchi1985refinement,
+  title={Map formation in the developing Xenopus retinotectal system: an examination of ganglion cell terminal arborizations},
+  author={Sakaguchi, DS and Murphey, RK},
+  journal={Journal of Neuroscience},
+  volume={5},
+  number={12},
+  pages={3228--3245},
+  year={1985},
+  publisher={Soc Neuroscience}
+}
+
+@article{zheng2014synfire,
+  title={Robust development of synfire chains from multiple plasticity mechanisms},
+  author={Zheng, Pengsheng and Triesch, Jochen},
+  journal={Frontiers in computational neuroscience},
+  volume={8},
+  pages={66},
+  year={2014},
+  publisher={Frontiers}
+}
+
+@article{savin2014stdpreward,
+  title={Emergence of task-dependent representations in working memory circuits},
+  author={Savin, Cristina and Triesch, Jochen},
+  journal={Frontiers in computational neuroscience},
+  volume={8},
+  pages={57},
+  year={2014},
+  publisher={Frontiers}
+}
+
+@article{aswolinskiy2015stdpreward,
+  title={RM-SORN: a reward-modulated self-organizing recurrent neural network},
+  author={Aswolinskiy, Witali and Pipa, Gordon},
+  journal={Frontiers in computational neuroscience},
+  volume={9},
+  pages={36},
+  year={2015},
+  publisher={Frontiers}
+}
