--- a/main.tex
+++ b/main.tex
@@ -213,7 +213,11 @@ To better assess whether the predictions of the model were confirmed in experime
 
 \subsection*{Sensitivity analysis}
 
-While a comparison with one faithfully constructed computational model is important, a better approach is to consider a family of models, and see which aspects of a model are critical for the replication of biological results, and which are not essential \citep{linderman2017constrain,pauli2018repro}. For example, in our model, how important was to assume that the plasticity mostly happened in response to a learning signal, during actual collisions? Would a presence of structured visual activity, but not necessarily unsuccessful looming avoidance, be enough for looming selectivity development? And is structured sensory flow even necessary for changes in network properties, or would spontaneous activity be enough \citep{triplett2018emergence}? To answer these questions, we repeated our analysis, while gradually simplifying the assumptions of the model. We first let the model develop while exposed to randomized translational stimuli instead of looming stimuli. Then we also destroyed the spatial (but not temporal) structure of retinal inputs, by randomly reshuffling “pixels” in each stimulus. We also let the model develop while exposed to random visual noise. In a different set of experiments, we kept the same structured looming inputs as for the base model, but either relaxed the requirements on synaptic competition, or greatly decreased the amount of intrinsic plasticity present in the system, or replaced STDP with simple symmetrical Hebbian plasticity. The results of these sensitivity experiments are presented in Figure and Table 3.
+While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which elements are critical for the replication of biological results, and which are not essential \citep{linderman2017constrain,pauli2018repro}. For example, in our model, how important was to assume that the plasticity happened in response to a learning signal during actual collisions? Would  looming selectivity develop if instead of unsuccessful looming avoidance we use general visual stimuli? Is structured sensory flow even necessary \citep{triplett2018emergence}? To answer these questions, we repeated our analysis several times, excluding different parts of the model one by one. We first let the model develop while exposed to randomized translational stimuli instead of looming stimuli. In a different set of computational experiments, exposed the model to random visual noise. Then we returned to looming stimuli, but either removed explicit synaptic competition, by replacing it with synapse weight decay; or greatly decreased the amount of intrinsic plasticity present in the system; or replaced STDP with simple symmetrical Hebbian plasticity. The results of these 5 sensitivity experiments are presented in Figure and Table 3, together with curves for the original "full" model.
+
+We found that training on looming stimuli was not critical for the model, but training on structured visual stimuli (as opposed to noise) was. When looming stimuli were replaced by randomized mixes of translational, looming, and receding stimuli, almost all network variables developed very similarly to how they developed in the main series of experiments. All measures of selectivity to looming stimuli, both looming compared to flash, and looming compared to scramble, also developed similarly, but reached 20-50\% lower selectivity values. In contrast, when patterned stimuli were replaced with uncorrelated noise, selectivity did not improve, and while the network still changed its degree distribution, efficiency, and modularity, it did not acquire hierarchical structure, and positioning of cells selective for looming stimili within the graph remained random.
+
+For networks that was exposed to looming stimuli, but used incomplete sets of developmental rules... TODO
 
 \section*{Discussion}
 
