Revert "minor, almost a test"
This reverts commit 644d6e2dd6d6e8c4536ca3abc0423d6e93128974.

--- a/main.tex
+++ b/main.tex
@@ -17,10 +17,10 @@
 
 %\usepackage[switch,pagewise]{lineno} % Numbered lines for two columns
 \usepackage[pagewise]{lineno} % Numbered lines for one column
-\usepackage{xcolor}
-\renewcommand{\linenumberfont}{\normalfont\bfseries\small\color{lightgray}}
 
 % \usepackage{hyperref} % good for urls, but it also URLizes references
+\usepackage{xcolor}
+\renewcommand{\linenumberfont}{\normalfont\bfseries\small\color{lightgray}}
 \definecolor{linkcolor}{rgb}{0.2,0.6,0.7} % Neuron-style link color
 \usepackage[colorlinks=true,citecolor=linkcolor,urlcolor=blue]{hyperref}%
 %\usepackage{url}
@@ -167,8 +167,6 @@ The network \textbf{modularity} is the most commonly used measure of large-scale
 
 The property of \textbf{hierarchical flow} is a derivative measure \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values \citep{katz1953original,fletcher2018katz} (see below) within the network. Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layers networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, but the data we observed was hard to interpret, as structural non-randomness and the non-randomness of degree distribution affected hierarchical flow coefficients in opposite ways, with two effects cancelling each other. Indeed, observed networks were more hierarchical than randomized networks with matching degrees distribution ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively), but randomized networks with matching degrees distribution were substantially less hierarchical than fully randomized networks with matching distribution of $w_{ji}$ ($d=-$4.5 and $-$2.6, paired $p_t=$ 4e-8 and 2e-6 respectively). There was no difference in development ($d=-$0.3, $p_t=$ 0.4).
 
-We also introduced a measure of \textbf{cyclicity}, which quantified the presence and average strength of various directed cycles starting from a node and returning back to the same node, relative to a similar value on a full graph without self-loops, with the same number of nodes (see Methods). The cyclicity of observed graphs (1.4$\pm$1.4 e-4 for younger, 3.8$\pm$4.3 e-5 for older tadpoles) was higher than expected for this degree distribution ($d$=0.8 and 0.8, paired $p_t$=0.002 and 0.01 for younger and older animals respectively), but the value for a random graph with a matching degree distribution was lower than for a fully randomized graph ($d$=$-$2.2 and $-$2.6, paired $p_t$=3e-5 and 2e-6 respectively). This non-trivial pattern means that compared to a fully random graph, the distribution of degrees did not favor short cycles (as it had fewer nodes with $k>$2), yet actually observed graphs were structurally enriched with short cycles. There was no change in cyclicity in development ($d$=$-$0.1, $p_t$=0.9).
-
 \subsection*{Selectivity Mechanisms}
 
 Even not knowing the exact architecture of collision-detecting networks in the tectum, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that these neurons may be non-randomly located within the detected connectivity graph: for example, receive more incoming connections, compared to non-selective cells. To investigate this question, for each reconstructed network, we calculated correlation coefficients between looming selectivity of each neuron and values that quantified its positioning within the graph, known as measures of \textbf{centrality}.
@@ -207,7 +205,7 @@ The variability of responses to looming stimuli over time, quantified as the num
 
 The distribution of degrees in the model was very similar to that in the biological data set: the share of weakly connected cells (weighted in degree $<$ 0.5) plummeted from $\sim$50\% in naive networks to 9$\pm$2\% by the end of training. On the contrary, the share of cells with degrees of 1 and 2 increased from $\sim$40\% to 83$\pm$2\%. With this changes, the power constant for the degree distribution changed from $\gamma \sim -$1.5 to $-$1.96$\pm$0.03 for both in- and out-degrees, which also qualitatively matched changes in biological experiments.
 
-Finally, we observed that most network measures changed with network development (Fig): efficiency and modularity increased, while clustering and cyclicity decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring (Fig). The hierarchical flow increased mildly in development, and this was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradition with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
+Finally, we observed that most network measures changed with network development (Fig): efficiency and modularity increased, while clustering decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring (Fig). The hierarchical flow increased mildly in development, and this was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradition with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
 
 To better assess whether the predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 2). For each of these statements, we then compared the model to the experimental data, and labeled each comparison as either a match (Y), a clear contradiction (N), or an unclear case (no label). We used “no label” for all cases when the model predicted a change, but the comparison between tadpoles of different ages had p-value above 0.05. This choice reflected the lack of a clear match between developmental trajectories of the model and of real tadpoles, as well as a relatively small sample size of our biological experiments (see Discussion). Overall, the model and the experiments were compatible in terms of flash-looming selectivity, but did not match in terms of scrambled-looming selectivity. The interplay between cell position and connectivity, were similar in the model and in biological experiments, except for the spatial distribution of looming-selective cells within the retinotopic map that were opposite (peripheral in the model; central in tadpoles). Changes in degree distribution were very similar, but except for modularity, other network measures did not match. When correlations between different measures of node centrality and cell collectivity were considered, some of them matched, but many did not.
 
@@ -223,7 +221,7 @@ For networks that was exposed to looming stimuli, but used incomplete sets of de
 
 In this study, we hypothesized that a developing network governed by STDP and synaptic competition, and stimulated by patterned visual stimuli, would spontaneously develop selectivity for looming stimuli, and a non-random network structure. We also hypothesized that these basic predictions would be observed both in the model, and in biological developmental experiments. The support for this hypothesis is mixed. At one hand, the model did develop both selectivity for looming stimuli, and a non-random structure. Several aspects of this non-randomness (namely, the change in degree distribution and modularity) were also replicated in biological experiments. At the same time, not all model predictions were replicated, and we observed no improvement in looming detection in biological experiments, which was concerning, and it seemed to contradict prior behavioral studies [Dong]. Below we speculate on the possible reasons for this apparent contradiction.
 
-Both in computational and biological experiments, observed networks were clearly non-random, with several key parameters (efficiency, modularity, clustering, hierarchy, and cyclicity) significantly different from what would be expected in a randomized network. In the model, most network parameters also changed in development, but except for changes in degree distribution and modularity, we did not detect differences between tectal networks in younger and older tadpoles. This suggests that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}[xxx], the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even reversed in late development, which means that to compare model and experimental results we have to make an important assumption about whether stage 46 tadpoles correspond to some mid-point of development, or whether stage 46 already falls on the developmental plateau. Rather surprisingly, the absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may fall on the “plateau” of looming selectivity development. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is due to maturation of sensorimotor connections from the tectum to the hindbrain that we did not assess in this study.
+Both in computational and biological experiments, observed networks were clearly non-random, with several key parameters (efficiency, modularity, clustering, and hierarchy) significantly different from what would be expected in a randomized network. In the model, most network parameters also changed in development, but except for changes in degree distribution and modularity, we did not detect differences between tectal networks in younger and older tadpoles. This suggests that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}[xxx], the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even reversed in late development, which means that to compare model and experimental results we have to make an important assumption about whether stage 46 tadpoles correspond to some mid-point of development, or whether stage 46 already falls on the developmental plateau. Rather surprisingly, the absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may fall on the “plateau” of looming selectivity development. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is due to maturation of sensorimotor connections from the tectum to the hindbrain that we did not assess in this study.
 
 At the same time, we could have easily missed some changes in younger and older networks in biological experiments, as the power of our study was relatively low. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$0.05 criterion and 80\% detection power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of the full tectal network. With a coverage so sparse, our network parameters estimations were expected to be noisy, further lowering the power of our tests.
 
@@ -348,7 +346,7 @@ $$E = \frac{1}{n} \sum_{i \neq j}^n{\frac{d_{ij}}{n-1}}$$
 
 where $d_{ij}$ is the length of the shortest path $P_{ij}$ connecting nodes $i$ and $j$: $d_{ij} = \sum_{kl \in P_{ij}}{R_{kl}}$
 
-\textbf{Clustering coefficient} \citep{fagiolo2007} was calculated using the Brain Connectivity Toolbox, with clustering function that supported weighted directed graphs:
+\textbf{Clustering coefficient} \citep{fagiolo2007} was calculated using the Brain Connectivity Toolbox, with a function that supported weighted directed graphs:
 
 $$C = \frac{1}{n} \sum_i{\frac {t_i}{(k^o_i+k^i_i)(k^o_i+k^i_i-1)-2\sum_j{w_{ij}w_{ji}}}}$$
 
@@ -363,12 +361,6 @@ Our custom definition of \textbf{hierarchical flow} was inspired by \citep{mones
 $$z_i = (1-d) + \frac{d}{\text{max}(w_{kl})} \sum_{j \neq i}{a_j w_{ij}}$$
 
 Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node: that is, we work with raw weights of $w_{ij}$ rather than $w_{ij}/\sum_k{w_{kj}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network [ref]: $h = \text{max}(z_i) - \text{mean}(z_i)$.
-
-We also introduced a measure of \textbf{cyclicity}, or the prevalence of short cycles in the graph. We considered nodes of the graph one by one, assumed that constant activation flow arrives to each of these nodes, and let the activation spread across the edges of the graph with probability $d \cdot w_{ji}$ (with $d = $0.9), similar to how we did it for Katz centrality. We then let these activation flows converge to a stable solution, and calculated the total flow that reached each node back via all cycles that started from it and ended in it. We then calculated the total of all these cyclical flows across all nodes, and divided it onto a similar value calculated on a full directed graph without loops with the same number of nodes. In practice cyclic flows to each node can of course be calculated together by introducing a flow matrix $\textbf{S}$, and then going through a sequence of iterations: 
-
-$$\textbf{S} = \textbf{W} \cdot \text{max}(\textbf{S} , \textbf{E}) $$
-
-where $\textbf{E}$ is the identity matrix, and max is an elementwise maximum operator.
 
 To check whether network values described above were different from values expected on a random graph, we performed a two-stage \textbf{graph randomization}. First, we randomized each graph using a variety degree-preserving reshuffling \citep{maslov2002}. To do so, for a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes be different ($i \neq j \neq k \neq l$). Then we cross-wired them, thus gradually randomizing network topology:
 
