Methods: cyclicity included in "unreported analyses"

--- a/main.tex
+++ b/main.tex
@@ -404,7 +404,7 @@ $$\bar{a}=\sum_i{w_i a_i}/\sum_i{w_i}$$
 
 Note that this formula differs slightly from the one used in the Brain Connectivity Toolbox \citep{rubinov2010toolbox}.
 
-Unreported analyses. For the sake of transparency, here is a list of measures that we calculated, but could not interpret, and so did not include in the final manuscript: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centralities; Katz centralities and hierarchical flows on reversed graph $W’$; alternative measure of cell selectivity based on McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell.
+\textbf{Unreported analyses}. For the sake of transparency, we report the list of measures that were calculated, but were hard to interpret, and so were not included in the final manuscript: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centralities; Katz centralities and hierarchical flows on reversed graph $W'$; alternative measure of cell selectivity based on McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell. We also made several attempts to estimate the prevalence of directed cycles in our networks, but decided that these new measures require further validation.
 
 \subsection*{Developmental Model}
 
