Results: starting the summary table

--- a/main.tex
+++ b/main.tex
@@ -157,7 +157,7 @@ We then looked at whether connected cells were more likely to be located closer 
 
 \subsection*{Network properties}
 
-We measured several standard network properties for every connectivity graph reconstructed from tadpole tecta. For each age group, we used two approaches to check whether our network properties were statistically unusual. First, we compared network properties of our graphs to properties of randomly rewired graphs, in which the distribution of edge weights $w_{ij}$, and the number of edges adjacent to each node (node degrees) were kept fixed. This procedure is called degree-preserving rewiring \citep{maslov2002}. Second, we performed a similar comparison, but also randomized node degrees, by reassigning existing edges among all possible edges in a graph (full randomization). In theory, two different modes of randomization allowed us to ascribe non-randomness of observed network parameters to either non-random degree distribution, or non-randomness of meso-scale graph structure \citep{ansmann2012surrogate}. We also compared network statistics between younger and older tadpoles, to see whether network properties changed in development. The summary of all comparisons is given in Table 1.
+We measured several standard network properties for every connectivity graph reconstructed from tadpole tecta. For each age group, we used two approaches to check whether our network properties were statistically unusual. First, we compared network properties of our graphs to properties of randomly rewired graphs, in which the distribution of edge weights $w_{ij}$, and the number of edges adjacent to each node (node degrees) were kept fixed. This procedure is called degree-preserving rewiring \citep{maslov2002}. Second, we performed a similar comparison, but also randomized node degrees, by reassigning existing edges among all possible edges in a graph (full randomization). In theory, two different modes of randomization allowed us to ascribe non-randomness of observed network parameters to either non-random degree distribution, or non-randomness of meso-scale graph structure \citep{ansmann2012surrogate}. We also compared network statistics between younger and older tadpoles, to see whether network properties changed in development.
 
 The measure of large-scale connectivity in the graph, named weighted \textbf{network efficiency}, is defined as the average inverse shortest path, for any two nodes in the network \citep{rubinov2010toolbox,latora2001efficiency}. This value is high when, on average, there is a short path between any two randomly chosen nodes, and so signals can be easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. example). Traditionally, this measure interprets graph edges as pairwise distances between the nodes, with high value edges representing weak connections; for a graph of weights however, high value edges represent strong connections, so network efficiency is calculated on inverse weights $R_{ij} = 1/w_{ij}$ \citep{rubinov2010toolbox}. In our experiments, network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a random network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively), or a fully randomized network with the same distribution of edge weights ($d$=$-$0.5 and $-$0.05; paired $p_t$=0.02 and 0.01 for younger and older tadpoles respectively). Efficiency did not seem to change in development ($d$=$-$0.8, $p_t$=0.06).
 
@@ -191,7 +191,7 @@ To allow the network develop in time, we introduced three simple developmental r
 
 With these three rules at play, we exposed the model to patterned sensory stimulation, modeling retinotopic inputs from the eye. For the main series of computational experiments, we hypothesized that in biological networks, STDP-driven changes may be amplified by a learning signal \citep{savin2014stdpreward,aswolinskiy2015stdpreward} originating either in dimming receptors in the retina \citep{baranauskas2012}, or mechanosensory systems of the hindbrain \citep{pratt2009multisens,felch2016,truszkowski2017}. Therefore, in the main set of experiments, we only exposed our model to looming stimuli (but see sensitivity analysis below). The network was allowed to develop for 12500 time steps, experienced at least 500 looming stimuli, and we saved its topology at five equally spaced time points during this process, from a naive network, to its final state. We ran independent simulations 50 times, and for each network snapshot we analyzed the properties of the connectivity graph, as well as the responses of each network to “model visual stimuli” that included a looming stimulus, a scrambled stimulus, and a full-field flash. We then analyzed these data in the same way as we did for biological experiments.
 
-The summary of modeling results is shown in Fig., and their comparison to imaging experiments, is given in Table 2. In development, the network became selective for looming stimuli, both in terms of the total response (by the end of developme tresponding to looming 99$\pm$9\% stronger than to flash) and mean selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10). The share of cells selective for looming stimuli also increased, and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells.
+The summary of modeling results is shown in Fig. In development, the network became selective for looming stimuli, both in terms of the total response (by the end of development, responding to looming 99$\pm$9\% stronger than to flash) and mean selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10). The share of cells selective for looming stimuli also increased, and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells.
 
 To see whether in our model the nature of visual stimuli could be reconstructed from network activation, we used a logistic regression on a vector of total cell responses, similar to how it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain, and the weights of connections to this output element are also modified through reinforcement learning.
 
@@ -207,7 +207,12 @@ The distribution of degrees in the model was very similar to that in the biologi
 
 Finally, we observed that most network measures changed with network development (Fig): efficiency and modularity increased, while clustering decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring (Fig). The hierarchical flow increased mildly in development, and this was entirely due to structured changes in network topology, as the effect was not present in rewired graphs. A robust increase in modularity may seem to be in contradition with a stable number of ensembles detected in the network, as network modules are expected to form activity ensembles \citep{triplett2018emergence}. We assume that the reason for this difference was that both in biological and computational experiments, we tried to identify ensembles in highly structured responses, and not in long recordings of spontaneous activity.
 
-To better assess whether the predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 2). For each of these statements, we then compared the model to the experimental data, and labeled each comparison as either a match (Y), a clear contradiction (N), or an unclear case (no label). We used “no label” for all cases when the model predicted a change, but the comparison between tadpoles of different ages had p-value above 0.05. This choice reflected the lack of a clear match between developmental trajectories of the model and of real tadpoles, as well as a relatively small sample size of our biological experiments (see Discussion). Overall, the model and the experiments were compatible in terms of flash-looming selectivity, but did not match in terms of scrambled-looming selectivity. The interplay between cell position and connectivity, were similar in the model and in biological experiments, except for the spatial distribution of looming-selective cells within the retinotopic map that were opposite (peripheral in the model; central in tadpoles). Changes in degree distribution were very similar, but except for modularity, other network measures did not match. When correlations between different measures of node centrality and cell collectivity were considered, some of them matched, but many did not.
+To better assess whether the predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 1). For each of these statements, we then compared the model to the experimental data, and labeled each comparison as either a match (Y), a clear contradiction (N), or an unclear case (no label). We used “no label” for all cases when the model predicted a change, but the comparison between tadpoles of different ages had p-value above 0.05, to reflect that developmental trajectories in the model and in real tadpoles were not well matched, and also that the sample size in our biological experiments was relatively small (see Discussion). Overall, the model and the experiments were compatible in terms of flash-looming selectivity, but did not match in terms of scrambled-looming selectivity. The interplay between cell position and connectivity was similar in the model and in biological experiments, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distribution were very similar, but except for modularity, other network measures did not match. When correlations between different measures of node centrality and cell collectivity were considered, some of them matched, but many did not.
+
+\begin{table}
+    \input{table1.tex}
+    \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models.}
+\end{table}
 
 \subsection*{Sensitivity analysis}
 
